Closed Bug 1826418 Opened 3 years ago Closed 2 years ago

about:protections doesn't count fingerprinters

Categories

(Core :: Privacy: Anti-Tracking, defect, P3)

defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox115 --- fixed

People

(Reporter: tjr, Assigned: hsohaney)

References

(Blocks 1 open bug)

Details

(Whiteboard: [fpp:future])

Attachments

(2 files, 2 obsolete files)

My about:protections page reports no fingerprinting scripts blocked. However if I visit e.g. cnn.com - it shows me that it has blocked some fingerprinting scripts.

Blocks: 1826419
Whiteboard: [fpp:future]

Hello Tom,

We actually count the tracker after the document is closed. Could you verify if the counter increases after you close the CNN tab? Thanks.

Flags: needinfo?(tom)

Okay, yeah, I see now. After I close the tab, the count increments on about:protections - however the doorhanger reported that it blocked two fingerprinters, but about:protections only incremented by one. Is that intentional? From the copy on about:protections it seems like it's saying the number of trackers blocked, not the number of pages trackers were blocked on....

Flags: needinfo?(tom)
Severity: -- → S3
Priority: -- → P3

For shims we set the replaced flag here: https://searchfox.org/mozilla-central/rev/31f5847a4494b3646edabbdd7ea39cb88509afe2/netwerk/url-classifier/UrlClassifierFeatureFingerprintingProtection.cpp#162
this may lead to us not correctly recording the fact that we still blocked a tracker. Could be that the method here doesn't pick it up anymore: https://searchfox.org/mozilla-central/rev/31f5847a4494b3646edabbdd7ea39cb88509afe2/toolkit/components/antitracking/TrackingDBService.sys.mjs#184

I'll look more into this. However it seems that this is rather a backlog item.

Flags: needinfo?(pbz)
Assignee: nobody → hsohaney
Status: NEW → ASSIGNED
Attachment #9334632 - Attachment is obsolete: true
Attachment #9335513 - Attachment is obsolete: true
Pushed by tihuang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/551ba6213443 Added a new event to categorize replaced shims scripts for fingerprinting. Replaced shims for fingerprinting are counted in about:protections too now. r=timhuang,anti-tracking-reviewers https://hg.mozilla.org/integration/autoland/rev/af6b28cc40a8 Part 2: Added a clause to check for replaced shims scripts when classifying for other event types. r=timhuang
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
Flags: needinfo?(pbz)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: