Bug 1826418 - Added a new event to categorize replaced shims scripts for fingerprinting. Replaced shims for fingerprinting are counted in about:protections too now. r=timhuang,anti-tracking-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D178324